@@ -8,9 +8,8 @@
 
 package org.nqcx.doox.commons.util.security;
 
+import org.apache.commons.codec.binary.Base64;
 import org.bouncycastle.jce.provider.BouncyCastleProvider;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
@@ -76,7 +75,7 @@ public class AES256Utils {
      */
     public static String encryptBase64(String text, String key) {
         try {
-            return (new BASE64Encoder()).encodeBuffer(encrypt(text.getBytes(DEFAULT_CHARSET), key));
+            return Base64.encodeBase64String(encrypt(text.getBytes(DEFAULT_CHARSET), key));
         } catch (UnsupportedEncodingException e) {
             e.printStackTrace();
         }
@@ -158,7 +157,7 @@ public class AES256Utils {
      */
     public static String decryptBase64(String text, String key) {
         try {
-            return new String(decrypt(new BASE64Decoder().decodeBuffer(text), key), DEFAULT_CHARSET);
+            return new String(decrypt(Base64.decodeBase64(text), key), DEFAULT_CHARSET);
         } catch (IOException e) {
             e.printStackTrace();
         }
